[improvement](auth|chat|common|headless|launcher|webapp) Enhance multi-tenant support, builtin template initializers and code cleanup
- Add default/visit/app user methods to UserService for system-level operations
- Refactor builtin template initialization from demo classes to declarative config
- Migrate MybatisConfig to common module, remove duplicates in launchers
- Add BuiltinChatModelInitializer and BuiltinDatabaseInitializer
- Update tenant-related controllers and services for improved isolation
- Minor frontend adjustments for tenant and permission management

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>